k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iasw
  labels:
    name: iasw
    environment: production
